# SanJuan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  client.h  game.c  game.h  main.c  shell.c  shell.h
src/game_sp/: CMakeLists.txt  dummy.c  dummy.h  game_sp.c  game_sp.h
src/util/: CMakeLists.txt  util.c  util.h
